[package]
name = "acdc"
version = "0.1.0"
authors = [
    "Robert Mitwicki <robert@thclab.online>",
    "Edyta Pawlak <edyta.pawlak@opensoftware.pl>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "0.15"
thiserror = "1.0"
indexmap = {version = "1.9.3", features = ["serde"]}
said = { git = "https://github.com/THCLab/cesrox", branch = "macros", features = ["macros"]  }

[dev-dependencies]
tempfile = { version = "3.1" }