[package]
name = "acdc"
description = "Authentic Chained Data Containers"
version = "0.1.0"
edition = "2021"
authors = [
    "Human Colossus Foundation <contact@humancolossus.org>",
]
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "1.3"
thiserror = "1.0"
indexmap = { version = "1.9.3", features = ["serde"]}
said = { version = "0.4.3", features = ["macros"]  }
cesrox = { version = "0.1.8" }
uuid = {version = "1.3.3", features = ["v4", "fast-rng"]}

[dev-dependencies]
tempfile = { version = "3.1" }
